# gbmgeometry

./: pyproject.toml
gbmgeometry/cli/: __init__.py  get_posthist.py  get_trigdat.py
